# query-to-pdf

./: .env  .env.example  CHANGELOG.md  COMPREHENSIVE_PDF_ENHANCEMENT_SUMMARY.md  FASTAPI_README.md  GOOGLE_API_SETUP.md  PLANNER_IMPROVEMENTS.md  PREMIUM_PDF_IMPROVEMENTS.md  PROFESSIONAL_PDF_IMPROVEMENTS.md  README.md  SUCCESS_SUMMARY.md  advanced_content_generator.py  debug_report.html  enhanced_content_generator.py  enhanced_data_visualization.py  enhanced_firecrawl.py  enhanced_firecrawl_integration.py  enhanced_firecrawl_research.py  enhanced_visualization_generator.py  fastapi_server.py  firecrawl_integration.py  firecrawl_research.py  google_api_demo.py  google_api_integration.py  html_components.py  html_renderer.py  index.py  main_application.py  main_application_websocket_ready.py  professional_pdf_styling.py  prompt-test.txt  pyproject.toml  report_planner.py  report_template.html  report_template.typ  requirements.txt  run_and_test.md  run_fastapi.py  setup.bat  setup.py  (+10 more)
templates/: template_0.typ  template_1.typ  template_2.typ  template_a.typ  template_test.typ
visuals/: __init__.py  charts.py
