[project]
name = "query-to-pdf"
version = "2.0.0"
description = "Query to PDF"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
generate-report = "query_to_pdf.main:main"

[tool.setuptools]
packages = ["query_to_pdf"]
